package beastBook.fxui;

import beastBook.core.Exercise;
import beastBook.core.User;
import beastBook.core.Workout;
import beastBook.json.BeastBookPersistence;
import java.io.IOException;
import java.lang.Integer;
import javafx.event.ActionEvent;
import javafx.fxml.FXML;
import javafx.scene.control.Button;
import javafx.scene.control.TableColumn;
import javafx.scene.control.TableView;
import javafx.scene.control.TextField;
import javafx.scene.control.cell.PropertyValueFactory;
import javafx.scene.text.Text;

/**
 * Controller for the CreateWorkout screen.
 */
public class CreateWorkoutController extends AbstractController {

  @FXML
  private TableView<Exercise> workoutTable = new TableView<Exercise>();

  @FXML
  private Text exceptionFeedback;

  @FXML
  private Button backButton;

  @FXML
  private TextField exerciseNameInput;

  @FXML
  private TextField repGoalInput;

  @FXML
  private TextField weigthInput;

  @FXML
  private TextField setsInput;

  @FXML
  private TextField restInput;

  @FXML
  private TextField titleInput;

  @FXML
  private Button createButton;

  @FXML
  private Button loadButton;

  @FXML
  private Button deleteButton;

  @FXML
  private Button addExercise;

  @FXML
  private Text exerciseTitle;

  @FXML
  private Text repGoalTitle;

  @FXML
  private Text weightTitle;

  @FXML
  private Text setsTitle;

  @FXML
  private Text restTimeTitle;

  private Workout workout = new Workout();
  private Exercise exercise = new Exercise();
  private Exercise selectedExercise = new Exercise();
  private TableColumn<Exercise, String> exerciseNameColumn;
  private TableColumn<Exercise, Integer> repGoalColumn;
  private TableColumn<Exercise, Double> weightColumn;
  private TableColumn<Exercise, Integer> setsColumn;
  private TableColumn<Exercise, Integer> restTimeColumn;
  private BeastBookPersistence persistence = new BeastBookPersistence();

  public static final String WRONG_INPUT_BORDER_COLOR = "-fx-text-box-border: #B22222;"
          + "-fx-focus-color: #B22222";
  public static final String CORRECT_INPUT_BORDER_COLOR = "";

  /**
   * Initializes the CreateWorkout scene with the listeners for validation of input fields.
   */
  public void initialize() {
    updateTable();
    exerciseNameInput.setOnKeyTyped(event -> {
      new StringValidator(exerciseTitle, exerciseNameInput, exceptionFeedback);
    });
    repGoalInput.setOnKeyTyped(event -> {
      new IntValidator(repGoalTitle, repGoalInput, exceptionFeedback);
    });
    weigthInput.setOnKeyTyped(event -> {
      new DoubleValidator(weightTitle, weigthInput, exceptionFeedback);
    });
    setsInput.setOnKeyTyped(event -> {
      new IntValidator(setsTitle, setsInput, exceptionFeedback);
    });
    restInput.setOnKeyTyped(event -> {
      new IntValidator(restTimeTitle, restInput, exceptionFeedback);
    });
  } 

  /**
  * Sets the workout table columns. Clears the columns first, to avoid duplicate columns.
  * After the columns are created, they are added to the table view. 
  */
  public void updateTable() {
    workoutTable.getColumns().clear();
         
    exerciseNameColumn = new TableColumn<Exercise, String>("Exercise name");
    exerciseNameColumn.setCellValueFactory(
      new PropertyValueFactory<Exercise, String>("exerciseName")
    );
        
    repGoalColumn = new TableColumn<Exercise, Integer>("Rep goal");
    repGoalColumn.setCellValueFactory(
      new PropertyValueFactory<Exercise, Integer>("repGoal")
    );

    weightColumn = new TableColumn<Exercise, Double>("Weight");
    weightColumn.setCellValueFactory(
      new PropertyValueFactory<Exercise, Double>("weight")
    );

    setsColumn = new TableColumn<Exercise, Integer>("Nr of sets");
    setsColumn.setCellValueFactory(
      new PropertyValueFactory<Exercise, Integer>("sets")
    );

    restTimeColumn = new TableColumn<Exercise, Integer>("Rest time in sec");
    restTimeColumn.setCellValueFactory(
      new PropertyValueFactory<Exercise, Integer>("restTime")
    );
       
    workoutTable.getColumns().add(exerciseNameColumn);
    workoutTable.getColumns().add(repGoalColumn);
    workoutTable.getColumns().add(weightColumn);
    workoutTable.getColumns().add(setsColumn);
    workoutTable.getColumns().add(restTimeColumn);
    setColumnsSize();
    workoutTable.getItems().setAll(workout.getExercises());
  }

  /**
  * Resizes the width of the columns.
  */
  private void setColumnsSize() {
    exerciseNameColumn.setPrefWidth(100);        
    repGoalColumn.setPrefWidth(75);
    weightColumn.setPrefWidth(75);
    setsColumn.setPrefWidth(80);
    restTimeColumn.setPrefWidth(110);
  }

  /**
  * Return the exercise on the specified row. Mainly used for test reasons.
  *
  * @param row the row you want to have access to / get an Exercise object from.
  *
  * @return the Exercise object on the requested row
  */
  Exercise getTable(int row) {
    return workoutTable.getItems().get(row);
  }

  /**
  * Gets workout.
  *
  * @return the workout. Mainly used for test reasons
  */
  Workout getWorkout() {
    return workout;
  }
    
  /**
  * Gets the workout table.
  *
  * @return the workout table
  */
  TableView<Exercise> getWorkoutTable() {
    return workoutTable;
  }

  /**
  *  Runs when the "Add exercise" button is clicked.
  *  If all the input fields are in the correct format,
  *  an Exercise object is made with the input fields data.
  *  The exercise object is then added to the workout object and
  *  its list over exercises, this is then connected to the signed-in user.
  *  The workout table is then "reloaded" with the new exercise added to the list.
  *  If the input fields are not in the correct format, the method catches the Exception.
  *  A text with red color appears on the screen with a message to the user
  *  saying that the exercise could not be added (because of wrong inputs).
  *  The text disappears when an exercise is added successfully.
  */
  @FXML
  void addExercise() {
    if (exceptionFeedback.getText().equals("") && !checkForEmptyInputFields()) {
      try {
        int repGoal;
        double weight;
        int sets;
        int rest;
        try {
          repGoal = Integer.parseInt(repGoalInput.getText());
        } catch (NumberFormatException a) {
          throw new IllegalArgumentException("Rep Goal must be a number!");
        }
        try {
          weight = Double.parseDouble(weigthInput.getText());
        } catch (NumberFormatException b) {
          throw new IllegalArgumentException("Working Weight must be a number");
        }
        try {
          sets = Integer.parseInt(setsInput.getText());
        } catch (NumberFormatException c) {
          throw new IllegalArgumentException("Sets must be a number");
        }
        try {
          rest = Integer.parseInt(restInput.getText());
        } catch (NumberFormatException d) {
          throw new IllegalArgumentException("Rest Time must be a number");
        }
        String name = exerciseNameInput.getText();
        exercise = new Exercise(name, repGoal, weight, sets, rest);
        
        this.workout.addExercise(exercise);
        workoutTable.getItems().add(exercise);
        exercise = new Exercise();   
        exceptionFeedback.setText("");
        createButton.setDisable(false);
        emptyInputFields();
      } catch (IllegalArgumentException i) {
        exceptionFeedback.setText(i.getMessage()); 
      } catch (Exception e) {
        exceptionFeedback.setText(e.getMessage());
        //exceptionFeedback.setText("exercise catch");
      }  
    } else if (checkForEmptyInputFields()) {
      exceptionFeedback.setText("Input missing in a field");
    } else {
      exceptionFeedback.setText("Wrong input, exercise was not created");
    }
  }

  /**
  * Empties all the input fields.
  * Should be called when an exercise is successfully added to the workout
  */
  private void emptyInputFields() {
    exerciseNameInput.setText("");
    repGoalInput.setText("");
    weigthInput.setText("");
    setsInput.setText("");
    restInput.setText("");
  }

  private boolean checkForEmptyInputFields() {
    int counter = 0;
    if (exerciseNameInput.getText().equals("")) {
      exerciseNameInput.setStyle(WRONG_INPUT_BORDER_COLOR);
      counter++;
    }
    if (repGoalInput.getText().equals("")) {
      repGoalInput.setStyle(WRONG_INPUT_BORDER_COLOR);
      counter++;
    }
    if (weigthInput.getText().equals("")) {
      weigthInput.setStyle(WRONG_INPUT_BORDER_COLOR);
      counter++;
    }
    if (setsInput.getText().equals("")) {
      setsInput.setStyle(WRONG_INPUT_BORDER_COLOR);
      counter++;
    }
    if (restInput.getText().equals("")) {
      restInput.setStyle(WRONG_INPUT_BORDER_COLOR);
      counter++;
    }
    if (counter > 1) {
      return true;
    }
    return false;
  }

  /**
  * Loads a workout using title input in GUI.
  * If no title input is given, an error message is displayed in GUI.
  * If no file found with given title, an error message is displayed in GUI.
  *
  * @param event When Load Workout button is clicked in GUI, loadWorkout() is fired.
  */
  @FXML
  void loadWorkout(ActionEvent event) {     
    if (titleInput.getText().equals("") || titleInput.getText() == null) {
      exceptionFeedback.setText("Missing Title!");
      return;
    }
    try {
      workout = user.getWorkout(titleInput.getText());
      updateTable();
      exceptionFeedback.setText("");
    } catch (Exception e) {
      exceptionFeedback.setText("Workout not found!");
    }
  }

  /**
  * Creates a workout and saves it as a file with input given in GUI.
  * If no title input is given, an error message is displayed in GUI.
  * If an error occurs in saveWorkout, an error message is displayed in GUI.
  *
  * @param event When Create Workout button is clicked in GUI, createWorkout() is fired
  */
  @FXML
  void createWorkout(ActionEvent event) {
    workout.setName(titleInput.getText());
    if (titleInput.getText() == null || titleInput.getText().equals("")) {
      exceptionFeedback.setText("Input title is empty, please enter name to workout");
    } else {
      try {
        user.addWorkout(workout);
        persistence.setSaveFilePath(user.getUserName());
        persistence.saveUser(user);
        exceptionFeedback.setText("Workout saved!");
      } catch (IllegalArgumentException i) {
        exceptionFeedback.setText(i.getMessage());
      } catch (Exception e) {
        System.err.println(e);
        exceptionFeedback.setText("Save Workout failed!");
      }
    }
  }

  @FXML
  private void exerciseSelectedListener() throws IOException {
    selectedExercise = workoutTable.getSelectionModel().getSelectedItem();
    if (selectedExercise != null) {
      deleteButton.setDisable(false);
    } else {
      deleteButton.setDisable(true);
    }
  }

  @FXML
  void deleteExercise() throws IllegalStateException, IOException {
    workout.removeExercise(selectedExercise);
    exceptionFeedback.setText(
            "The exercise '" + selectedExercise.getExerciseName() + "' was deleted!"
    );
    persistence.setSaveFilePath(user.getUserName());
    persistence.saveUser(user);
    updateTable();
    deleteButton.setDisable(true);
  }

  TextField getWeightInput() {
    return this.weigthInput;
  }
  
  @Override
  void loadHome() throws IOException {
    super.loadHome();
  }

  @Override
  void loadLogin() throws IOException {
    super.loadLogin();
  }

  void setUser(User user) {
    this.user = user;
  }

  /**
  * Validates if int given as input is allowed.
  * If int is not accepted, border for input field is given red colour.
  */
  public class IntValidator {
    /**
    * IntValidators method for validating.
    *
    * @param title title of the inputfield
    * @param field input-field to be validated
    * @param exception exception text to be changed if error found
    */
    public IntValidator(Text title, TextField field, Text exception) {
      String text = field.getText();
      try {
        int num = Integer.parseInt(text);
        if (num <= 0) {
          exception.setText(title.getText().replace(":", "") + " must be more than 0");
          field.setStyle(WRONG_INPUT_BORDER_COLOR);
        } else {
          exceptionFeedback.setText("");
          field.setStyle(CORRECT_INPUT_BORDER_COLOR);
        }
      } catch (NumberFormatException e) {
        exception.setText(
            title.getText().replace(":", "")
            + " must be a number and can not exceed "
            + Integer.MAX_VALUE
        );
        field.setStyle(WRONG_INPUT_BORDER_COLOR);
      }
    }
  }

  /**
  * Validates if double given as input is allowed.
  * If double is not accepted, border for input field is given red colour.
  */
  public class DoubleValidator {
    /**
    * DoubleValidators method for validating.
    *
    * @param title title of the inputfield
    * @param field input-field to be validated
    * @param exception exception text to be changed if error found
    */
    public DoubleValidator(Text title, TextField field, Text exception) {
      String text = field.getText();
      try {
        double num = Double.parseDouble(text);
        if (num <= 0) {
          exception.setText(title.getText().replace(":", "") + " must be more than 0");
          field.setStyle(WRONG_INPUT_BORDER_COLOR);
        } else {
          exceptionFeedback.setText("");
          field.setStyle(CORRECT_INPUT_BORDER_COLOR);
        }
      } catch (NumberFormatException e) {
        exception.setText(
                title.getText().replace(":", "")
                + " must be a number and can not exceed "
                + Double.MAX_VALUE
        );
        field.setStyle(WRONG_INPUT_BORDER_COLOR);
      }
    }
  }

  /**
  * Validates if String given as input is allowed.
  * If string is not accepted, border for input field is given red colour.
  */
  public class StringValidator {
    /**
    * StringValidators method for validating.
    *
    * @param title title of the inputfield
    * @param field input-field to be validated
    * @param exception exception text to be changed if error found
    */
    public StringValidator(Text title, TextField field, Text exception) {
      String text = field.getText();
      text = text.trim();
      if ((text.length() <= 0) || (text.equals(""))) {
        exception.setText(
                title.getText().replace(":", "")
                + " can not be blank"
        );
        field.setStyle(WRONG_INPUT_BORDER_COLOR);
      } else {
        exceptionFeedback.setText("");
        field.setStyle(CORRECT_INPUT_BORDER_COLOR);
      }
    }
  }
}